--- a/product.html
+++ b/product.html
@@ -32,7 +32,64 @@
         </ul>
     </nav>
 
-   
+   <section class="p-4 text-center">
+        <h1 class="font-bold text-3xl mt-5">Our Products</h1>
+        <div class="w-200 p-4">
+        <input type="text" class="w-full h-full border border-gray-400 p-2 mt-2" placeholder="Search for the product...">
+
+        </div>
+        <div class="grid grid-cols-2 mt-5 gap-5 md:grid-cols-4">
+            <div> 
+                <img src="./image/bestseller_5.png" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 1">
+                <h1>Rose Plant</h1>
+                <p>$ 20</p>
+            </div>
+
+            <div>
+                <img src="./image/bestseller_6.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 2">
+                <h1>Lily Plant</h1>
+                <p>$ 5</p>
+            </div>
+
+            <div>
+                <img src="./image/bestseller_7.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 3">
+                <h1>Snake Plant</h1>
+                <p>$ 10</p>
+            </div>
+
+            <div>
+                <img src="./image/bestseller_8.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 4">
+                <h1>New Plant</h1>
+                <p>$ 30</p>
+            </div>
+        </div>
+
+         <div class="grid grid-cols-2 mt-5 gap-5 md:grid-cols-4">
+            <div> 
+                <img src="./image/bestseller_9.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 1">
+                <h1>Rose Plant</h1>
+                <p>$ 20</p>
+            </div>
+
+            <div>
+                <img src="./image/bestseller_10.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 2">
+                <h1>Lily Plant</h1>
+                <p>$ 5</p>
+            </div>
+
+            <div>
+                <img src="./image/bestseller_11.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 3">
+                <h1>Snake Plant</h1>
+                <p>$ 10</p>
+            </div>
+
+            <div>
+                <img src="./image/bestseller_12.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="bestseller 4">
+                <h1>New Plant</h1>
+                <p>$ 30</p>
+            </div>
+        </div>
+    </section>
 
     <!--Footer-->
     <section class="bg-green-100 p-10 flex flex-col gap-5">
